# free-talking-tauri

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: tauri-release.yml
src/: styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx
src/app/model/: navigation.ts
src/entities/agent/api/: agentApi.ts  characterApi.ts
src/entities/agent/model/: defaultAgents.ts  types.ts
src/entities/chat/api/: chatApi.ts
src/entities/chat/model/: types.ts
src/entities/user/api/: userApiKeyApi.ts
src/entities/user/model/: types.ts
src/features/auth/api/: authApi.ts
src/features/auth/login/: LoginScreen.tsx
src/features/auth/model/: useAuthSession.ts
src/pages/english-conversation/ui/: EnglishConversationView.tsx
src/shared/api/: client.ts
src/shared/lib/: file.ts  format.ts
src/shared/ui/: Button.tsx  Textarea.tsx
src/widgets/app-shell/ui/: AppSidebar.tsx  AppTopbar.tsx
